# better-assignment

./: .gitignore  README.md
apps/backend/: .env  main.py  pyproject.toml
apps/backend/app/: __init__.py
apps/backend/app/api/: email_routes.py  task_routes.py
apps/backend/app/auth/: clerk_middleware.py
apps/backend/app/core/: config.py
apps/backend/app/db/: session.py
apps/backend/app/llm/: gemini_client.py
apps/backend/app/models/: __init__.py  email.py  email_reply.py  task.py  user.py
apps/backend/app/orchestration/: browser_graph.py  email_graph.py
apps/backend/app/orchestration/runtime/: artifacts.py  session_store.py
apps/backend/app/repositories/: email_repository.py  user_repository.py
apps/backend/app/scheduler/: email_scheduler.py
apps/backend/app/schemas/: email.py  task.py  user.py
apps/backend/app/services/: email_service.py  reply_service.py  sync_service.py  task_service.py  unsubscribe_service.py
apps/backend/app/workers/: sync_worker.py
apps/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
apps/frontend/src/: main.tsx  styles.css
apps/frontend/src/api/: emailApi.ts  taskApi.ts
apps/frontend/src/components/: EmailListItem.tsx  ReplyModal.tsx
apps/frontend/src/features/emails/: types.ts
apps/frontend/src/features/tasks/: types.ts
apps/frontend/src/hooks/: emailHooks.ts  taskHooks.ts  useAuthToken.ts
apps/frontend/src/pages/: App.tsx  Dashboard.tsx
apps/frontend/src/store/: emailStore.ts
infra/: docker-compose.yml
